// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ssr > basic 1`] = `
"<!DOCTYPE html>
<html lang=\\"en\\">
  <head>
    <meta charset=\\"UTF-8\\" />
    <link rel=\\"icon\\" href=\\"/favicon.ico\\" />
    <link rel=\\"stylesheet\\" href=\\"/assets/index-28fadf32.css\\" />
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0\\" />
  </head>

  <body>
    <script type=\\"module\\" src=\\"/src/main.js\\"></script>
    <script type=\\"module\\">
      import y from 'y'
import xx from './xx'
document.write(xx)
console.log(y)
    </script>
    <script>
      window.addEventListener('click', async () => {
        await import('./esm.js')
})
    </script>
  <template data-merak-url='https://localhost:3000/app/index.html' class='test'><!DOCTYPE html>
<html lang=\\"en\\">
  <head>
    <meta charset=\\"UTF-8\\" />
    <link rel=\\"icon\\" href=\\"https://localhost:3000/favicon.ico\\" />
    <link rel=\\"stylesheet\\" href=\\"https://localhost:3000/assets/index-28fadf32.css\\" />
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0\\" />
  </head>

  <body>
    <script type=\\"module\\" src=\\"https://localhost:3000/src/main.js\\"></script>
    <script type=\\"module\\">
      import y from 'y'
import xx from 'https://localhost:3000/app/xx'
document.write(xx)
console.log(y)
    </script>
    <script>
      window.addEventListener('click', async () => {
        await import('https://localhost:3000/app/esm.js')
})
    </script>
  </body>
</html>
</template></body>
</html>
"
`;

exports[`ssr > stream 1`] = `
"<!DOCTYPE html>
<html lang=\\"en\\">
  <head>
    <meta charset=\\"UTF-8\\" />
    <link rel=\\"icon\\" href=\\"/favicon.ico\\" />
    <link rel=\\"stylesheet\\" href=\\"/assets/index-28fadf32.css\\" />
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0\\" />
  </head>

  <body>
    <script type=\\"module\\" src=\\"/src/main.js\\"></script>
    <script type=\\"module\\">
      import y from 'y'
import xx from './xx'
document.write(xx)
console.log(y)
    </script>
    <script>
      window.addEventListener('click', async () => {
        await import('./esm.js')
})
    </script>
  </body>
</html>
<template data-merak-url='https://localhost:3000/app/index.html' >
<html lang='en'>
  <head>
    <meta charset='UTF-8'></meta>
    <link rel='icon' href='https://localhost:3000/favicon.ico'></link>
    <link rel='stylesheet' href='https://localhost:3000/assets/index-28fadf32.css'></link>
    <meta name='viewport' content='width=device-width, initial-scale=1.0'></meta>
  </head>

  <body>
    <script type='module' src='https://localhost:3000/src/main.js'></script>
    <script type='module'>
      import y from 'y'
import xx from './xx'
document.write(xx)
console.log(y)
    </script>
    <script>
      window.addEventListener('click', async () => {
        await import('./esm.js')
})
    </script>
  </body>
</html>
</template>"
`;
